# sonic

./: LICENSE.txt  README.md  b.sh  meson.build
.cache/clangd/index/: accepts.cpp.8E1D98576897C95D.idx  ast.h.C167C323CEDFC840.idx  ast_fwd.h.E9F008BF1A57D497.idx  ast_io.cpp.D73DC5C2A9FBC28C.idx  ast_io.h.CBC5F43A16DCBE38.idx  ast_json.cpp.62F0F8CCE3E7F67B.idx  ast_json.h.17F3BB3A1A3C85BB.idx  cli.cpp.9263723F7130762E.idx  cli.cpp.FFA8E327920BB163.idx  codegen.cpp.B7D270BD427341E6.idx  codegen.h.114EDBF7341925D0.idx  config.h.CC792C210989DF16.idx  config.h.F7661EE5AB25DF90.idx  debug.cpp.DACD1D972D565852.idx  debug.cpp.F7324E71FAC59855.idx  debug.h.10FFC11DC6461BE0.idx  debug.h.2B12DC5E9752A080.idx  debug.h.E752C21D4C308E35.idx  debugging.cpp.4EE7F39FDE51B943.idx  debugging.h.608F4308EFA4B294.idx  diagnostics.h.4FCD1E2D72005278.idx  diagnostics.h.52547A5131B7710F.idx  error.cpp.510FE49DD7C4C42F.idx  error.h.FA3D7967BB210951.idx  expr.h.6100DD9DAAAAD643.idx  expr.h.FEA7CAF71D3F29AF.idx  io.cpp.04B42C3501630931.idx  io.cpp.B2FCE5CA47C5A86D.idx  io.h.2377B1BF596CDB30.idx  io.h.7FE1640E3D6C58A4.idx  io.h.915C0914A888C841.idx  lexer.cpp.02CCA8361867B987.idx  lexer.cpp.5BFE416075241EC9.idx  lexer.cpp.B2811156483522C8.idx  lexer.h.85F0D11048F686A0.idx  lexer.h.B4C4938B067D6472.idx  lexer.h.BCB2B1E8239F2700.idx  main.cpp.F276C3B16D981BF2.idx  manager.h.9AA06967488B32D1.idx  operand.h.0384917E6AE9EC14.idx  (+41 more)
docs/: completed.txt
docs/sonic-progress/: CONSTRUCTION PROGRESS.md
examples/: config.snc  hello.sn
examples/src/: main.sn  math.sn  std.sn
src/: main.cpp
src/compiler/: ast.h  ast_io.cpp  ast_io.h  ast_json.cpp  ast_json.h  codegen.cpp  codegen.h  diagnostics.h  lexer.cpp  lexer.h  manager.h  operand.h  optimizer.h  parser.cpp  parser.h  semantic.cpp  semantic.h  source.h  symbol.h  symbol_io.cpp  symbol_io.h  symbol_json.h  symbol_table.h  symboltable.cpp  symboltable.h  token.h
src/compiler/ast/: accepts.cpp  (+9 more)
src/core/: config.h  debugging.cpp  debugging.h  error.cpp  error.h  io.cpp  io.h  platform.h  startup.cpp  startup.h  target_info.h  token.h  type.h
src/driver/: cli.cpp
tests/: main.sn
(+2 files in other folders)
